--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "hdl"]
 	path = hdl
 	url = https://github.com/gridrf/hdl.git
+[submodule "buildroot"]
+	path = buildroot
+	url = https://github.com/gridrf/buildroot
+	branch = master
