--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 	path = buildroot
 	url = https://github.com/gridrf/buildroot
 	branch = master
+[submodule "u-boot-xlnx"]
+	path = u-boot-xlnx
+	url = https://github.com/gridrf/u-boot-xlnx.git
+	branch = pluto
